--- a/lung_cancer_prediction.ipynb
+++ b/lung_cancer_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJbTp1dbth0xYfBs0ks3Fp",
+      "authorship_tag": "ABX9TyPqG8G3OSCOH98sDxw1VEYx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "j2TCj54v4Bnn"
       },
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "UExQTptO4F3I"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df.head(10)"
+        "df.head()"
       ],
       "metadata": {
         "colab": {
@@ -83,7 +83,7 @@
         "id": "dXPmAUSh4F54",
         "outputId": "8e56473a-63d4-4116-950c-e924c7441db3"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +593,7 @@
         "id": "vTTr8H4o4F8t",
         "outputId": "7c29d42e-9612-4f0c-dc75-4d3d1e7b1c7c"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -726,7 +726,7 @@
         },
         "outputId": "97c8cf79-d6e5-4d72-ff27-9a0771f48d81"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,7 +762,7 @@
       "metadata": {
         "id": "kkivf9huj_iG"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -813,7 +813,7 @@
         "id": "6ZU5KfGJj_et",
         "outputId": "6d0f37ef-da8e-49ab-a683-53fdb3b47760"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -874,7 +874,7 @@
         "id": "U9dxEwiFD-nB",
         "outputId": "5a1452f7-5594-4531-86bc-7968858adf90"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -931,7 +931,7 @@
         "id": "VfKZ-kI_hQY-",
         "outputId": "a24f7b4f-6880-4586-9e2b-8de7e6b36953"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,7 +966,7 @@
         "id": "kwwSc7HGLjsM",
         "outputId": "f087e167-e891-448b-d97a-51d865d8a2c9"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -993,7 +993,7 @@
         "id": "tpO2PCv8A-cR",
         "outputId": "2aaf6368-8064-4043-8ff4-5ef0e3981bd8"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1174,7 +1174,7 @@
         "id": "lpRzJNdiAw0_",
         "outputId": "0154a64b-5f74-4a86-d851-12b8209d4c1a"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1205,7 +1205,7 @@
       "metadata": {
         "id": "qjkpk--S-r0s"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1222,7 +1222,7 @@
         "id": "2InCow_4B0vy",
         "outputId": "7f3e5595-8705-4080-cdfc-444cce8ee775"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1261,7 +1261,7 @@
       "metadata": {
         "id": "tu1cBrR4AN84"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1289,7 +1289,7 @@
       "metadata": {
         "id": "Mv0pUOKrAN-3"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1303,7 +1303,7 @@
       "metadata": {
         "id": "y7-AYg5UAOCl"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1336,7 +1336,7 @@
         "id": "97k_ey-AFaU-",
         "outputId": "2228ec75-b296-4583-d2ef-fb21c1d07071"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1382,7 +1382,7 @@
         "id": "iSZYN-uDFsGX",
         "outputId": "184fe1ba-c55b-4fea-e400-2b4421c8466b"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1423,7 @@
         "id": "odIqKW5aFxFL",
         "outputId": "d2083241-7b5f-43f7-c334-acbc406d552e"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
